css/styles.css
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap');

body {
  background-color: rgb(58, 193, 98);
  color: white;
  font-family: 'Playfair Display', serif;
  padding: 5px;
}

header {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  width: 95%;
  max-width: 1100px;
  margin: auto;
  padding: 5px;
  margin-bottom: 10px;
}

h1 {
  text-shadow: 1px 1px 1px rgba(50, 50, 50, 0.3);
}

.load-quote {
  color: #fff;
  text-shadow: 1px 1px 1px rgba(50, 50, 50, 0.3);
  width: 12em;
  max-height: 75px;
  margin-top: 20px;
  margin-bottom: 20px;
  margin-right: 25px;
  padding: 15px 0;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 4px;
  border: 2px solid rgba(0, 0, 0, 0.3);
  transition: 0.5s;
  font-size: 1.5rem;
}

.load-quote:hover {
  background-color: rgba(255, 255, 255, 0.1);
}

.load-quote:focus {
  outline: none;
}

.container {
  width: 90%;
  max-width: 1024px;
  margin: auto;
  padding: 5px;
}

.favorite-btn {
  color: #fff;
  text-shadow: 1px 1px 1px rgba(50, 50, 50, 0.3);
  width: 12em;
  max-height: 75px;
  margin-top: 20px;
  margin-bottom: 20px;
  padding: 15px 0;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 4px;
  border: 2px solid rgba(0, 0, 0, 0.3);
  transition: 0.5s;
  font-size: 1.5rem;
}

.favorite-btn:hover {
  background-color: rgba(255, 255, 255, 0.1);
}

.favorite-quotes {
  text-align: left; 
  margin: 0 auto;     
  width: 90%;      
  max-width: 1024px;   
  padding: 20px;
  font-size: 1.5rem;
}

.btn-group {
  display: flex;
  justify-content: center;
}

.toggle-group {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 25px; /* Adjusts the space between the label and the button */
  padding: 0px 10px;
  border: 2px solid rgba(0, 0, 0, 0.3);
  border-radius: 70px; 
  background-color: rgba(0, 0, 0, 0.1); 
}

.toggle-label {
  color: #fff;
  text-shadow: 1px 1px 1px rgba(50, 50, 50, 0.3);
  font-size: 2rem;
  font-style: italic;
  margin-left: 10px;
}

.toggle-randomizer {
  color: #fff;
  text-shadow: 1px 1px 1px rgba(50, 50, 50, 0.3);
  width: 100px;
  height: 100px;
  margin-top: 20px;
  margin-bottom: 20px;
  margin-right: 10px;
  padding: 0;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 50px;
  border: 2px solid rgba(0, 0, 0, 0.3);
  transition: 0.5s;
  font-size: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.toggle-randomizer:hover {
  background-color: rgba(255, 255, 255, 0.1);
}


.quote-box {
  text-shadow: 1px 1px 1px rgba(50, 50, 50, 0.3);
  line-height: 1.5;
}

.quote {
  font-size: 2rem;
  font-weight: 400;
  line-height: 1.2;
  position: relative;
  margin: 0;
  margin-left: 10px;
}

.quote:before,
.quote:after {
  font-size: 3rem;
  line-height: 2.5rem;
  position: absolute;
}

.quote:before {
  content: "“";
  top: 0.1em;
  left: -0.5em;
}

.quote:after {
  content: "”";
  bottom: -0.1em;
  margin-left: 0.1em;
  position: absolute;
}

.source {
  font-size: 1rem;
  letter-spacing: 0.05em;
  line-height: 1.1;
  text-align: right;
  margin-right: 4em;
}

.source:before {
  content: "—";
}

.citation {
  font-style: italic;
}

.citation:before {
  content: ", ";
  font-style: normal;
}

.year:before {
  content: ", ";
  font-style: normal;
}

.tags {
  font-style: normal;
}

.tags:before {
  content: ", (";
  font-style: normal;
}

.tags:after {
  content: ")";
  font-style: normal;
}

@media (min-width: 768px) {
  body {
    padding: 25px;
  }

  header {
    margin-bottom: 50px;
  }

  h1 {
    font-size: 3.5rem;
    height: 73px;
    margin-top: 20px;
    margin-right: 5px;
    border-bottom: 4px solid rgba(0, 0, 0, 0.3);
  }

  .load-quote {
    font-size: 1.5rem;
  }

  .container {
    padding: 25px 25px 15px 55px;
    background: rgba(0, 0, 0, 0.1);
    border-left: 5px solid rgba(0, 0, 0, 0.3);
    border-radius: 0 4px 4px 0;
  }

  .quote {
    font-size: 4rem;
  }

  .quote:before,
  .quote:after {
    font-size: 6rem;
  }

  .quote:before {
    top: 0.25em;
  }

  .quote:after {
    bottom: 0.1em;
  }

  .source {
    font-size: 1.25rem;
  }
}

